@@ -1,0 +1,19 @@
+# Generated by autorevision - do not hand-hack!
+
+s|@VCS_TYPE@|git|g
+s|@VCS_BASENAME@|autorevision|g
+s|@VCS_UUID@|da2830f81fec4c6ebce8ebf23f35b0e6b066c149|g
+s|@VCS_NUM@|414|g
+s|@VCS_DATE@|2017-03-03T21:36:23Z|g
+s|@VCS_BRANCH@|master|g
+s|@VCS_TAG@|v/1.20|g
+s|@VCS_TICK@|6|g
+s|@VCS_EXTRA@||g
+
+s|@VCS_ACTION_STAMP@|2017-03-03T21:36:23Z!dak180@users.sourceforge.net|g
+s|@VCS_FULL_HASH@|d9ff927f5a141dd33ea5bab265f67a2de3e8dcfb|g
+s|@VCS_SHORT_HASH@|d9ff927|g
+
+s|@VCS_WC_MODIFIED@|1|g
+
+# end
